--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -108,6 +108,7 @@
 					<i class="icon-only icon-36 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-32 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-28 icon-info bg-icon-default"></i>
+					<i class="icon-only icon-26 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-20 icon-info bg-icon-default"></i>
 					<i class="icon-only icon-16 icon-info bg-icon-default"></i>
@@ -123,6 +124,7 @@
 					<i class="icon-only icon-36 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-caution bg-icon-gray_1"></i>
@@ -138,6 +140,7 @@
 					<i class="icon-only icon-36 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-camera bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-camera bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-camera bg-icon-gray_1"></i>
@@ -153,6 +156,7 @@
 					<i class="icon-only icon-36 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-32 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-28 icon-phone bg-status-active"></i>
+					<i class="icon-only icon-26 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-24 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-20 icon-phone bg-status-active"></i>
 					<i class="icon-only icon-16 icon-phone bg-status-active"></i>
@@ -168,6 +172,7 @@
 					<i class="icon-only icon-36 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-32 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-28 icon-sms bg-status-active"></i>
+					<i class="icon-only icon-26 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-24 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-20 icon-sms bg-status-active"></i>
 					<i class="icon-only icon-16 icon-sms bg-status-active"></i>
@@ -183,6 +188,7 @@
 					<i class="icon-only icon-36 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-32 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-28 icon-mail bg-status-active"></i>
+					<i class="icon-only icon-26 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-24 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-20 icon-mail bg-status-active"></i>
 					<i class="icon-only icon-16 icon-mail bg-status-active"></i>
@@ -198,6 +204,7 @@
 					<i class="icon-only icon-36 icon-call bg-status-active"></i>
 					<i class="icon-only icon-32 icon-call bg-status-active"></i>
 					<i class="icon-only icon-28 icon-call bg-status-active"></i>
+					<i class="icon-only icon-26 icon-call bg-status-active"></i>
 					<i class="icon-only icon-24 icon-call bg-status-active"></i>
 					<i class="icon-only icon-20 icon-call bg-status-active"></i>
 					<i class="icon-only icon-16 icon-call bg-status-active"></i>
@@ -213,6 +220,7 @@
 					<i class="icon-only icon-36 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-32 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-28 icon-memo bg-status-active"></i>
+					<i class="icon-only icon-26 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-24 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-20 icon-memo bg-status-active"></i>
 					<i class="icon-only icon-16 icon-memo bg-status-active"></i>
@@ -228,6 +236,7 @@
 					<i class="icon-only icon-36 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-locked bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-locked bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-locked bg-icon-gray_1"></i>
@@ -243,6 +252,7 @@
 					<i class="icon-only icon-36 icon-fav"></i>
 					<i class="icon-only icon-32 icon-fav"></i>
 					<i class="icon-only icon-28 icon-fav"></i>
+					<i class="icon-only icon-26 icon-fav"></i>
 					<i class="icon-only icon-24 icon-fav"></i>
 					<i class="icon-only icon-20 icon-fav"></i>
 					<i class="icon-only icon-16 icon-fav"></i>
@@ -258,6 +268,7 @@
 					<i class="icon-only icon-36 icon-fav-active"></i>
 					<i class="icon-only icon-32 icon-fav-active"></i>
 					<i class="icon-only icon-28 icon-fav-active"></i>
+					<i class="icon-only icon-26 icon-fav-active"></i>
 					<i class="icon-only icon-24 icon-fav-active"></i>
 					<i class="icon-only icon-20 icon-fav-active"></i>
 					<i class="icon-only icon-16 icon-fav-active"></i>
@@ -273,6 +284,7 @@
 					<i class="icon-only icon-36 icon-fav-active2"></i>
 					<i class="icon-only icon-32 icon-fav-active2"></i>
 					<i class="icon-only icon-28 icon-fav-active2"></i>
+					<i class="icon-only icon-26 icon-fav-active2"></i>
 					<i class="icon-only icon-24 icon-fav-active2"></i>
 					<i class="icon-only icon-20 icon-fav-active2"></i>
 					<i class="icon-only icon-16 icon-fav-active2"></i>
@@ -288,6 +300,7 @@
 					<i class="icon-only icon-36 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-noresult bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-noresult bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-noresult bg-icon-gray_1"></i>
@@ -303,6 +316,7 @@
 					<i class="icon-only icon-36 icon-won bg-black-88"></i>
 					<i class="icon-only icon-32 icon-won bg-black-88"></i>
 					<i class="icon-only icon-28 icon-won bg-black-88"></i>
+					<i class="icon-only icon-26 icon-won bg-black-88"></i>
 					<i class="icon-only icon-24 icon-won bg-black-88"></i>
 					<i class="icon-only icon-20 icon-won bg-black-88"></i>
 					<i class="icon-only icon-16 icon-won bg-black-88"></i>
@@ -318,6 +332,7 @@
 					<i class="icon-only icon-36 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-32 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-28 icon-percent bg-icon-default"></i>
+					<i class="icon-only icon-26 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-20 icon-percent bg-icon-default"></i>
 					<i class="icon-only icon-16 icon-percent bg-icon-default"></i>
@@ -333,6 +348,7 @@
 					<i class="icon-only icon-36 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-calculator bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-calculator bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-calculator bg-icon-gray_1"></i>
@@ -348,6 +364,7 @@
 					<i class="icon-only icon-36 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-caution bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-caution bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-caution bg-icon-gray_1"></i>
@@ -363,6 +380,7 @@
 					<i class="icon-only icon-36 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-32 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-28 icon-close bg-icon-default"></i>
+					<i class="icon-only icon-26 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-20 icon-close bg-icon-default"></i>
 					<i class="icon-only icon-16 icon-close bg-icon-default"></i>
@@ -378,6 +396,7 @@
 					<i class="icon-only icon-36 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-32 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-28 icon-nodata bg-icon-gray_2"></i>
+					<i class="icon-only icon-26 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-24 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-20 icon-nodata bg-icon-gray_2"></i>
 					<i class="icon-only icon-16 icon-nodata bg-icon-gray_2"></i>
@@ -393,6 +412,7 @@
 					<i class="icon-only icon-36 icon-user bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-user bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-user bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-user bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-user bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-user bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-user bg-icon-gray_1"></i>
@@ -408,6 +428,7 @@
 					<i class="icon-only icon-36 icon-time bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-time bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-time bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-time bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-time bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-time bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-time bg-icon-gray_1"></i>
@@ -423,6 +444,7 @@
 					<i class="icon-only icon-36 icon-location bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-location bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-location bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-location bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-location bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-location bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-location bg-icon-gray_1"></i>
@@ -438,6 +460,7 @@
 					<i class="icon-only icon-36 icon-birth bg-purple-600"></i>
 					<i class="icon-only icon-32 icon-birth bg-purple-600"></i>
 					<i class="icon-only icon-28 icon-birth bg-purple-600"></i>
+					<i class="icon-only icon-26 icon-birth bg-purple-600"></i>
 					<i class="icon-only icon-24 icon-birth bg-purple-600"></i>
 					<i class="icon-only icon-20 icon-birth bg-purple-600"></i>
 					<i class="icon-only icon-16 icon-birth bg-purple-600"></i>
@@ -453,6 +476,7 @@
 					<i class="icon-only icon-36 icon-wallet bg-cyan-500"></i>
 					<i class="icon-only icon-32 icon-wallet bg-cyan-500"></i>
 					<i class="icon-only icon-28 icon-wallet bg-cyan-500"></i>
+					<i class="icon-only icon-26 icon-wallet bg-cyan-500"></i>
 					<i class="icon-only icon-24 icon-wallet bg-cyan-500"></i>
 					<i class="icon-only icon-20 icon-wallet bg-cyan-500"></i>
 					<i class="icon-only icon-16 icon-wallet bg-cyan-500"></i>
@@ -468,6 +492,7 @@
 					<i class="icon-only icon-36 icon-calendar bg-red-500"></i>
 					<i class="icon-only icon-32 icon-calendar bg-red-500"></i>
 					<i class="icon-only icon-28 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-26 icon-calendar bg-red-500"></i>
 					<i class="icon-only icon-24 icon-calendar bg-red-500"></i>
 					<i class="icon-only icon-20 icon-calendar bg-red-500"></i>
 					<i class="icon-only icon-16 icon-calendar bg-red-500"></i>
@@ -483,6 +508,7 @@
 					<i class="icon-only icon-36 icon-calendar-repeat"></i>
 					<i class="icon-only icon-32 icon-calendar-repeat"></i>
 					<i class="icon-only icon-28 icon-calendar-repeat"></i>
+					<i class="icon-only icon-26 icon-calendar-repeat"></i>
 					<i class="icon-only icon-24 icon-calendar-repeat"></i>
 					<i class="icon-only icon-20 icon-calendar-repeat"></i>
 					<i class="icon-only icon-16 icon-calendar-repeat"></i>
@@ -498,6 +524,7 @@
 					<i class="icon-only icon-36 icon-add bg-icon-default"></i>
 					<i class="icon-only icon-32 icon-add bg-icon-default"></i>
 					<i class="icon-only icon-28 icon-add bg-icon-default"></i>
+					<i class="icon-only icon-26 icon-add bg-icon-default"></i>
 					<i class="icon-only icon-24 icon-add bg-icon-default"></i>
 					<i class="icon-only icon-20 icon-add bg-icon-default"></i>
 					<i class="icon-only icon-16 icon-add bg-icon-default"></i>
@@ -513,6 +540,7 @@
 					<i class="icon-only icon-36 icon-user2"></i>
 					<i class="icon-only icon-32 icon-user2"></i>
 					<i class="icon-only icon-28 icon-user2"></i>
+					<i class="icon-only icon-26 icon-user2"></i>
 					<i class="icon-only icon-24 icon-user2"></i>
 					<i class="icon-only icon-20 icon-user2"></i>
 					<i class="icon-only icon-16 icon-user2"></i>
@@ -528,6 +556,7 @@
 					<i class="icon-only icon-36 icon-thumbsup bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-thumbsup bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-thumbsup bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-thumbsup bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-thumbsup bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-thumbsup bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-thumbsup bg-icon-gray_1"></i>
@@ -543,6 +572,7 @@
 					<i class="icon-only icon-36 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-thumbsdown bg-icon-gray_1"></i>
@@ -558,6 +588,7 @@
 					<i class="icon-only icon-36 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-32 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-28 icon-thumbsdown bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-24 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-20 icon-thumbsdown bg-icon-gray_1"></i>
 					<i class="icon-only icon-16 icon-thumbsdown bg-icon-gray_1"></i>
@@ -573,6 +604,7 @@
 					<i class="icon-only icon-36 icon-radio bg-icon-white"></i>
 					<i class="icon-only icon-32 icon-radio bg-icon-white"></i>
 					<i class="icon-only icon-28 icon-radio bg-icon-white"></i>
+					<i class="icon-only icon-26 icon-radio bg-icon-white"></i>
 					<i class="icon-only icon-24 icon-radio bg-icon-white"></i>
 					<i class="icon-only icon-20 icon-radio bg-icon-white"></i>
 					<i class="icon-only icon-16 icon-radio bg-icon-white"></i>
@@ -588,6 +620,7 @@
 					<i class="icon-only icon-36 icon-player-play bg-icon-white"></i>
 					<i class="icon-only icon-32 icon-player-play bg-icon-white"></i>
 					<i class="icon-only icon-28 icon-player-play bg-icon-white"></i>
+					<i class="icon-only icon-26 icon-player-play bg-icon-white"></i>
 					<i class="icon-only icon-24 icon-player-play bg-icon-white"></i>
 					<i class="icon-only icon-20 icon-player-play bg-icon-white"></i>
 					<i class="icon-only icon-16 icon-player-play bg-icon-white"></i>
@@ -603,6 +636,7 @@
 					<i class="icon-only icon-36 icon-player-pause bg-icon-white"></i>
 					<i class="icon-only icon-32 icon-player-pause bg-icon-white"></i>
 					<i class="icon-only icon-28 icon-player-pause bg-icon-white"></i>
+					<i class="icon-only icon-26 icon-player-pause bg-icon-white"></i>
 					<i class="icon-only icon-24 icon-player-pause bg-icon-white"></i>
 					<i class="icon-only icon-20 icon-player-pause bg-icon-white"></i>
 					<i class="icon-only icon-16 icon-player-pause bg-icon-white"></i>
@@ -618,6 +652,7 @@
 					<i class="icon-only icon-36 icon-player-prev bg-icon-white"></i>
 					<i class="icon-only icon-32 icon-player-prev bg-icon-white"></i>
 					<i class="icon-only icon-28 icon-player-prev bg-icon-white"></i>
+					<i class="icon-only icon-26 icon-player-prev bg-icon-white"></i>
 					<i class="icon-only icon-24 icon-player-prev bg-icon-white"></i>
 					<i class="icon-only icon-20 icon-player-prev bg-icon-white"></i>
 					<i class="icon-only icon-16 icon-player-prev bg-icon-white"></i>
@@ -633,6 +668,7 @@
 					<i class="icon-only icon-36 icon-player-next bg-icon-white"></i>
 					<i class="icon-only icon-32 icon-player-next bg-icon-white"></i>
 					<i class="icon-only icon-28 icon-player-next bg-icon-white"></i>
+					<i class="icon-only icon-26 icon-player-next bg-icon-white"></i>
 					<i class="icon-only icon-24 icon-player-next bg-icon-white"></i>
 					<i class="icon-only icon-20 icon-player-next bg-icon-white"></i>
 					<i class="icon-only icon-16 icon-player-next bg-icon-white"></i>
