--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -818,6 +818,7 @@ input[type="checkbox"].type-cyan:checked {background:url(../images/form/form_cya
 .icon-36 {flex:0 0 36px;width:36px;height:36px;}
 .icon-32 {flex:0 0 32px;width:32px;height:32px;}
 .icon-28 {flex:0 0 28px;width:28px;height:28px;}
+.icon-26 {flex:0 0 26px;width:26px;height:26px;}
 .icon-24 {flex:0 0 24px;width:24px;height:24px;}
 .icon-20 {flex:0 0 20px;width:20px;height:20px;}
 .icon-16 {flex:0 0 16px;width:16px;height:16px;}
