--- a/html/layout/layout-header.html
+++ b/html/layout/layout-header.html
@@ -85,7 +85,7 @@
 						<h1>Title</h1>
 					</div>
 					<div class="right">
-						<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
+						<button type="button" class="header-btn" aria-label="메뉴 열기" data-micromodal-trigger="modal-menu"><i class="i-menu"></i></button>
 					</div>
 				</div>
 			</header>
@@ -95,6 +95,241 @@
 	<!-- //wrap -->
 
 
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom  modal" id="modal-menu" aria-hidden="">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+				<div class="main-header">
+					<div class="left">
+						<button type="button" class="header-btn" aria-label="홈으로 가기"><i class="i-home"></i></button>
+					</div>
+					<div class="center">
+						<strong>메뉴</strong>
+					</div>
+					<div class="right">
+						<button type="button" class="header-btn" aria-label="메뉴 닫기" data-micromodal-close><i class="i-close"></i></button>
+					</div>
+				</div>
+				<div class="modal__content">
+					<div class="gnb">
+						<div class="gnb-user-info">
+							<div class="gnb-user-name">
+								<i class="icon-only icon-26 icon-user2"></i>
+								<strong>김우리<span>님</span></strong>
+							</div>
+							<div class="gnb-login-date">2024-11-04 17:13:19</div>
+						</div>
+						<div class="gnb-menu-search">
+							<div class="form">
+								<div class="input-wrap input-btn">
+									<input type="search" placeholder="메뉴를 검색해 보세요.">
+									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
+								</div>
+							</div>
+							<div class="gnb-menu-search-recent" style="display:none;">
+								<dl>
+									<dt>최근 검색어</dt>
+									<dd>
+										<div class="btn-xsmall btn-outlined btn-round">
+											<button class="btn-inner">계산기</button>
+											<button type="button" aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+										</div>
+										<div class="btn-xsmall btn-outlined btn-round">
+											<button class="btn-inner">명함</button>
+											<button type="button" aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+										</div>
+										<div class="btn-xsmall btn-outlined btn-round">
+											<button class="btn-inner">은퇴설계</button>
+											<button type="button" aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+										</div>
+										<div class="btn-xsmall btn-outlined btn-round">
+											<button class="btn-inner">등기간편열람</button>
+											<button type="button" aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+										</div>
+										<div class="btn-xsmall btn-outlined btn-round">
+											<button class="btn-inner">키워드</button>
+											<button type="button" aria-label="검색어 삭제"><i class="ico-close-16"></i></button>
+										</div>
+									</dd>
+								</dl>
+							</div>
+							<div class="gnb-menu-search-result" style="display:none;">
+								<strong>메뉴</strong>
+								<ul>
+									<li>
+										<a href="#">
+											<div>투자 정보</div>
+											<span class="bul"><span class="blind">&gt;</span></span>
+											<div>경제<mark>캘린</mark>더</div>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<div>투자 인사이트</div>
+											<span class="bul"><span class="blind">&gt;</span></span>
+											<div>전문가<mark>리포트</mark>더</div>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<div>투자 인사이트</div>
+											<span class="bul"><span class="blind">&gt;</span></span>
+											<div>전문가<mark>리포트</mark>더</div>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="gnb-figure-list">
+							<ul>
+								<li>
+									<a href="#">
+										<figure>
+											<picture>
+												<source srcset="../../resources/images/common/ico-gnb-fig01.svg">
+												<img src="../../resources/images/common/ico-gnb-fig01.svg" alt="">
+											</picture>
+											<figcaption>영업캘린더</figcaption>
+										</figure>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<figure>
+											<picture>
+												<source srcset="../../resources/images/common/ico-gnb-fig02.svg">
+												<img src="../../resources/images/common/ico-gnb-fig02.svg" alt="">
+											</picture>
+											<figcaption>내명함공유</figcaption>
+										</figure>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<figure>
+											<picture>
+												<source srcset="../../resources/images/common/ico-gnb-fig03.svg">
+												<img src="../../resources/images/common/ico-gnb-fig03.svg" alt="">
+											</picture>
+											<figcaption>고객명함</figcaption>
+										</figure>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<figure>
+											<picture>
+												<source srcset="../../resources/images/common/ico-gnb-fig04.svg">
+												<img src="../../resources/images/common/ico-gnb-fig04.svg" alt="">
+											</picture>
+											<figcaption>AI지식상담</figcaption>
+										</figure>
+									</a>
+								</li>
+							</ul>
+							<div class="stroke stroke4"></div>
+						</div>
+						<div class="gnb-menu-nav">
+							<div class="tab-content gnb-menu">
+								<ul class="tab-list tab-anchor overflow-list menu" role="tablist">
+									<li class="tab tab-active"><a role="tab" href="#gnb-list01">투자정보</a></li>
+									<li class="tab"><a role="tab" href="#gnb-list02">투자 인사이트</a></li>
+									<li class="tab"><a role="tab" href="#gnb-list03">펀드</a></li>
+									<li class="tab"><a role="tab" href="#gnb-list04">차트</a></li>
+									<li class="tab"><a role="tab" href="#gnb-list05">금융+</a></li>
+									<li class="tab"><a role="tab" href="#gnb-list06">정보+</a></li>
+									<li class="tab"><a role="tab" href="#gnb-list07">공지</a></li>
+									<li class="tab"><a role="tab" href="#gnb-list08">관리</a></li>
+									<li class="tab blind"><a role="tab" href="#gnb-list09">기타</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="gnb-menu-list">
+							<div class="gnb-menu-section" id="gnb-list01">
+								<strong>투자정보</strong>
+								<ul>
+									<li><a href="#">종합 주요 지수</a></li>
+									<li><a href="#">경제 캘린더</a></li>
+									<li><a href="#">금융 뉴스</a></li>
+									<li><a href="#">ETF 시장 정보</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list02">
+								<strong>투자 인사이트</strong>
+								<ul>
+									<li><a href="#">전문가 리포트</a></li>
+									<li><a href="#">전문가 칼럼</a></li>
+									<li><a href="#">富(부) 테크</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list03">
+								<strong>펀드</strong>
+								<ul>
+									<li><a href="#">수익률 Best</a></li>
+									<li><a href="#">판매 Best</a></li>
+									<li><a href="#">이달의 추천 펀드</a></li>
+									<li><a href="#">펀드 찾기</a></li>
+									<li><a href="#">나의 관심 펀드</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list04">
+								<strong>차트</strong>
+								<ul>
+									<li><a href="#">펀드/지수 비교</a></li>
+									<li><a href="#">지수 분석</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list05">
+								<strong>금융+</strong>
+								<ul>
+									<li><a href="#">예적금 계산기</a></li>
+									<li><a href="#">대출 계산기</a></li>
+									<li><a href="#">환율 계산기</a></li>
+									<li><a href="#">실시간 환율 조회</a></li>
+									<li><a href="#">간편 은퇴 설계</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list06">
+								<strong>정보+</strong>
+								<ul>
+									<li><a href="#">TWO CHAIRS</a></li>
+									<li><a href="#">등기 간편 열람</a></li>
+									<li><a href="#">고객기여도 조회</a></li>
+									<li><a href="#">기업정보 조회</a></li>
+									<li><a href="#">사업자 상태 조회</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list07">
+								<strong>공지</strong>
+								<ul>
+									<li><a href="#">공지사항</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list08">
+								<strong>관리</strong>
+								<ul>
+									<li><a href="#">고객명함 메모 관리</a></li>
+									<li><a href="#">커뮤니티 관리</a></li>
+								</ul>
+							</div>
+							<div class="gnb-menu-section" id="gnb-list09">
+								<strong class="blind">기타</strong>
+								<ul>
+									<li><a href="#">구독 설정</a></li>
+									<li><a href="#">이용 동의서</a></li>
+									<li><a href="#">서비스 해지</a></li>
+								</ul>
+							</div>
+						</div>
+						<div class="gnb-footer">
+							<button type="button" class="btn-xsmall btn-outlined btn-round">로그아웃</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
 
 </body>
 
