--- a/html/layout/layout-header.html
+++ b/html/layout/layout-header.html
@@ -87,7 +87,7 @@
 					<h1>고객 명함 관리</h1>
 				</div>
 				<div class="right">
-					<button type="button" class="header-btn" aria-label="메뉴 열기" data-micromodal-trigger="modal-menu"><i class="i-menu"></i></button>
+					<button type="button" class="header-btn" aria-label="메뉴 열기" id="modal-menu-trigger"><i class="i-menu"></i></button>
 				</div>
 			</div>
 		</header>
@@ -119,7 +119,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-businesscard-customer-regist"><i class="ico-add"></i>고객 명함 등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>고객 명함 등록</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -129,7 +129,7 @@
 
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-left modal" id="modal-menu" aria-hidden="true">
+	<div class="micromodal-slide micromodal-slide-left modal" id="modal-gnb" aria-hidden="true">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
@@ -277,7 +277,6 @@
 									<li class="tab"><a role="tab" href="#gnb-list06">정보+</a></li>
 									<li class="tab"><a role="tab" href="#gnb-list07">공지</a></li>
 									<li class="tab"><a role="tab" href="#gnb-list08">관리</a></li>
-									<li class="tab"><a role="tab" href="#gnb-list09" class="blind">기타</a></li>
 								</ul>
 							</div>
 						</div>
@@ -349,7 +348,7 @@
 									<li><a href="#">커뮤니티 관리</a></li>
 								</ul>
 							</div>
-							<div class="gnb-menu-section" id="gnb-list09">
+							<div class="gnb-menu-section">
 								<strong class="blind">기타</strong>
 								<ul>
 									<li><a href="#">구독 설정</a></li>
@@ -369,6 +368,28 @@
 	</div>
 	<!-- //micromodal -->
 
+	<script>
+		const modalMenu = document.querySelector('#modal-menu-trigger')
+		modalMenu.addEventListener("click", function() {
+			MicroModal.show('modal-gnb', {
+				// openTrigger: 'data-custom-open', // [3]
+				// closeTrigger: 'data-custom-close', // [4]
+				// openClass: 'is-open', // [5]
+				disableScroll: true, // [6]
+				disableFocus: true, // [7]
+				awaitOpenAnimation: true, // [8]
+				awaitCloseAnimation: true, // [9]
+				// debugMode: true // [10]
+				onShow: function(modal) {
+					gnb.init();
+					gnb.sizeCheck();
+				},
+				onClose: function(modal) {
+					console.log('onclose');
+				}
+			});
+		});
+	</script>
 
 </body>
 
