--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -303,6 +303,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .micromodal-slide-bottom .modal__content {/* background-color:var(--white-100); *//* padding:30px 16px 20px; *//* border-radius:20px 20px 0 0; *//* max-height:80vh; *//* overflow-y:auto; */}
 .micromodal-slide-bottom.micromodal-slide-bottom-full .modal__container {height:100%;}
 
+.micromodal-slide-left {}
 .micromodal-slide-left .modal__overlay {align-items:flex-start;}
 .micromodal-slide-left .modal__container {height:100%;max-height:100%;border-radius:0;}
 
@@ -333,11 +334,11 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 }
 @keyframes mmslideLeftIn {
     from {transform:translateX(100%);}
-    to {transform:translateX(0);}
+    to {transform:translateX(0);opacity:1;z-index:calc(var(--header-zIndex) +  1000);}
 }
 @keyframes mmslideLeftOut {
     from {transform:translateX(0);}
-    to {transform:translateX(100%);}
+    to {transform:translateX(100%);opacity:0;z-index:-1;}
 }
 
 /* jstree icons */
