--- a/html/layout/layout-header_search.html
+++ b/html/layout/layout-header_search.html
@@ -149,7 +149,7 @@
 
 					<!-- gnb -->
 					<div class="gnb">
-						<div class="gnb-user-info">
+						<div class="gnb-user-info" style="display:none;">
 							<div class="gnb-user-name">
 								<i class="icon-only icon-26 icon-user2"></i>
 								<strong>김우리<span>님</span></strong>
@@ -163,7 +163,7 @@
 									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 								</div>
 							</div>
-							<div class="gnb-menu-search-recent" style="display:none;">
+							<div class="gnb-menu-search-recent">
 								<dl>
 									<dt>최근 검색어</dt>
 									<dd>
@@ -220,7 +220,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="gnb-figure-list">
+						<div class="gnb-figure-list" style="display:none;">
 							<ul>
 								<li>
 									<a href="#">
@@ -269,7 +269,7 @@
 							</ul>
 							<div class="stroke stroke4"></div>
 						</div>
-						<div class="gnb-menu-nav">
+						<div class="gnb-menu-nav" style="display:none;">
 							<div class="tab-content gnb-menu">
 								<ul class="tab-list tab-anchor overflow-list menu" role="tablist">
 									<li class="tab tab-active"><a role="tab" href="#gnb-list01">투자정보</a></li>
@@ -283,7 +283,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="gnb-menu-list">
+						<div class="gnb-menu-list" style="display:none;">
 							<div class="gnb-menu-section" id="gnb-list01">
 								<strong>투자정보</strong>
 								<ul>
@@ -360,7 +360,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="gnb-footer">
+						<div class="gnb-footer" style="display:none;">
 							<button type="button" class="btn-xsmall btn-outlined btn-round">로그아웃</button>
 						</div>
 					</div>
