--- a/html/layout/layout-header_search_noresult.html
+++ b/html/layout/layout-header_search_noresult.html
@@ -149,7 +149,7 @@
 
 					<!-- gnb -->
 					<div class="gnb">
-						<div class="gnb-user-info">
+						<div class="gnb-user-info" style="display:none;">
 							<div class="gnb-user-name">
 								<i class="icon-only icon-26 icon-user2"></i>
 								<strong>김우리<span>님</span></strong>
@@ -193,34 +193,20 @@
 									</dd>
 								</dl>
 							</div>
-							<div class="gnb-menu-search-result" style="display:none;">
-								<strong>메뉴</strong>
-								<ul>
-									<li>
-										<a href="#">
-											<div>투자 정보</div>
-											<span class="bul"><span class="blind">&gt;</span></span>
-											<div>경제<mark>캘린</mark>더</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<div>투자 인사이트</div>
-											<span class="bul"><span class="blind">&gt;</span></span>
-											<div>전문가<mark>리포트</mark>더</div>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<div>투자 인사이트</div>
-											<span class="bul"><span class="blind">&gt;</span></span>
-											<div>전문가<mark>리포트</mark>더</div>
-										</a>
-									</li>
-								</ul>
+							<div class="gnb-menu-search-result">
+								<!-- division-center -->
+								<div class="division-center">
+
+									<div class="no-result">
+										<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
+										<p class="body-medium fw-400">일치하는 메뉴가 없습니다.</p>
+									</div>
+
+								</div>
+								<!-- //division-center -->
 							</div>
 						</div>
-						<div class="gnb-figure-list">
+						<div class="gnb-figure-list" style="display:none;">
 							<ul>
 								<li>
 									<a href="#">
@@ -269,7 +255,7 @@
 							</ul>
 							<div class="stroke stroke4"></div>
 						</div>
-						<div class="gnb-menu-nav">
+						<div class="gnb-menu-nav" style="display:none;">
 							<div class="tab-content gnb-menu">
 								<ul class="tab-list tab-anchor overflow-list menu" role="tablist">
 									<li class="tab tab-active"><a role="tab" href="#gnb-list01">투자정보</a></li>
@@ -283,7 +269,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="gnb-menu-list">
+						<div class="gnb-menu-list" style="display:none;">
 							<div class="gnb-menu-section" id="gnb-list01">
 								<strong>투자정보</strong>
 								<ul>
@@ -360,7 +346,7 @@
 								</ul>
 							</div>
 						</div>
-						<div class="gnb-footer">
+						<div class="gnb-footer" style="display:none;">
 							<button type="button" class="btn-xsmall btn-outlined btn-round">로그아웃</button>
 						</div>
 					</div>
