--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -442,3 +442,8 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .sc-label.label01 {background-color:var(--red-500);}
 .sc-label.label02 {background-color:var(--cyan-500);}
 .sc-label.label03 {background-color:var(--purple-500);}
+.sc-label.label04 {background-color:var(--gray-900);}
+.sc-label.label05 {background-color:var(--blue-400);}
+.sc-label.label06 {background-color:var(--red-500);}
+.sc-label.label07 {background-color:var(--red-900);}
+.sc-label.label08 {background-color:var(--deepblue-900);}
