--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -531,10 +531,20 @@ button.select.is-modal-open:after {background:url(../images/form/select-chevron-
 
 input[type="checkbox"].type-red {background:url(../images/form/form_red.svg) center center / 24px 24px no-repeat;}
 input[type="checkbox"].type-red:checked {background:url(../images/form/form_red_checked.svg) center center / 24px 24px no-repeat;}
+input[type="checkbox"].type-red700 {background:url(../images/form/form_red700.svg) center center / 24px 24px no-repeat;}
+input[type="checkbox"].type-red700:checked {background:url(../images/form/form_red700_checked.svg) center center / 24px 24px no-repeat;}
+input[type="checkbox"].type-red900 {background:url(../images/form/form_red900.svg) center center / 24px 24px no-repeat;}
+input[type="checkbox"].type-red900:checked {background:url(../images/form/form_red900_checked.svg) center center / 24px 24px no-repeat;}
 input[type="checkbox"].type-purple {background:url(../images/form/form_purple.svg) center center / 24px 24px no-repeat;}
 input[type="checkbox"].type-purple:checked {background:url(../images/form/form_purple_checked.svg) center center / 24px 24px no-repeat;}
 input[type="checkbox"].type-cyan {background:url(../images/form/form_cyan.svg) center center / 24px 24px no-repeat;}
 input[type="checkbox"].type-cyan:checked {background:url(../images/form/form_cyan_checked.svg) center center / 24px 24px no-repeat;}
+
+input[type="checkbox"].type-black {background:url(../images/form/form_black.svg) center center / 24px 24px no-repeat;}
+input[type="checkbox"].type-black:checked {background:url(../images/form/form_black_checked.svg) center center / 24px 24px no-repeat;}
+
+input[type="checkbox"].type-deepblue {background:url(../images/form/form_deepblue.svg) center center / 24px 24px no-repeat;}
+input[type="checkbox"].type-deepblue:checked {background:url(../images/form/form_deepblue_checked.svg) center center / 24px 24px no-repeat;}
 
 .inp-combi {min-height:52px;flex:1 1 100%;width:100%;align-items:center;}
 .inp-combi label {display:block;flex:1 0 50%;}
@@ -556,6 +566,12 @@ input[type="checkbox"].type-cyan:checked {background:url(../images/form/form_cya
 .inp-toggle input:before {content:'';position:absolute;left:3px;top:3px;width:18px;height:18px;background-color:var(--basic-white);filter:drop-shadow(0px 0px 4px var(--shadow-gray_3));border-radius:18px;transition:left 0.15s ease;}
 .inp-toggle input:checked {background-color:var(--brandPrimary-blue500);}
 .inp-toggle input:checked:before {left:21px;}
+
+/* inp-toggle-group */
+.inp-toggle-group {}
+.inp-toggle-group .inp-toggle:not(:last-child) {border-bottom:1px solid var(--border-4);}
+.inp-toggle-group label {padding:21px 16px;justify-content:space-between;gap:8px;}
+.inp-toggle-group .label-title {font-size:18px;line-height:1;}
 
 /* inp-toggle-text */
 .inp-toggle-text {position:relative;display:flex;gap:2px;border-radius:50px;background-color:var(--surface-surface100);padding:4px;}
